# Tower-Building

./: .gitignore  CMakeLists.txt  Compiler.txt  Constants.h  Constants.h.gch  Controller.cpp  Controller.h  DebugDraw.cpp  DebugDraw.h  Dot.cpp  Game.cpp  Game.h  Hook.cpp  Hook.h  Main.cpp  Main.cpp.bk  Main2.cpp  Makefile  Notas.txt  README.md  Readme.md  Utils.cpp  Utils.h  a.out  constant.cpp  constant.h  game  myapp  towerBuilding
Blocks/: BaseBlock.cpp  BaseBlock.h  Block.cpp  Block.h
Blocos/: Bloco.cpp  Bloco.h  BlocoBase.cpp  BlocoBase.h
DEBUG/: Debug.cpp  Debug.h
Hook/: Hook.cpp  Hook.h  Line.cpp  Line.h
Render/: EventHandler.h  Renderer.h  SDLEventHandler.h  SDLImplements.h  SDLRenderer.h
Utils/: Utils.cpp  Utils.h
src/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
src/DebugDraw/: DebugDraw.cpp  DebugDraw.h
src/controller/: Controller.cpp  Controller.h
src/logger/: ConsoleLogger.h  ILogger.h
src/models/: AbstractObject.h  BaseBlock.cpp  BaseBlock.h  Block.cpp  Block.h  BlockTest.cpp  BlockTest.h  Hook.cpp  Hook.h  Line.cpp  Line.h.bk
src/models/objects/: Heart.h
src/models/rules/: BlockManager.cpp  BlockManager.h  ContactListener.cpp  ContactListener.h  ForceApplier.h
src/render/: Camera.h  EventHandler.h  IRenderer.h  PortRender.h  RenderText.cpp  RenderText.h  RendererText.cpp  RendererText.h  SDLImplements.cpp  SDLImplements.h  SDLRenderer.cpp  SDLRenderer.h
src/render/audio/: AudioManager.cpp  AudioManager.h  (+1 more)
src/utils/: Constants.h  Utils.cpp  Utils.h
tests/: CMakeLists.txt  MockRenderer.h  SDLRendererTest.cpp  test_sprites.cpp
(+9 files in other folders)
